--- a/Packages/OxyPlot.Metro/OxyPlot.Metro.nuspec
+++ b/Packages/OxyPlot.Metro/OxyPlot.Metro.nuspec
@@ -12,6 +12,9 @@
     <description>OxyPlot is an open source .NET plotting library.</description>
     <language>en-US</language>
     <tags>winrt win8 metro plotting plot charting chart</tags>
+    <dependencies>
+      <dependency id="OxyPlot.Core" version="2013.1" />
+    </dependencies>
   </metadata>
   <files>
     <file src="lib\NetCore45\OxyPlot.Metro\Themes\Generic.xaml" target="lib\NetCore45\OxyPlot.Metro\Themes\Generic.xaml"/>
