--- a/Packages/OxyPlot.Pdf/OxyPlot.Pdf.nuspec
+++ b/Packages/OxyPlot.Pdf/OxyPlot.Pdf.nuspec
@@ -10,8 +10,8 @@
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>OxyPlot is an open source .NET plotting library. This package contains the .pdf export extensions.</description>
     <tags>pdf plotting plot charting chart</tags>
-    <!--<dependencies>
-      <dependency id="SampleDependency" version="1.0" />
-    </dependencies>-->
+    <dependencies>
+      <dependency id="OxyPlot.Core" version="2013.1" />
+    </dependencies>
   </metadata>
 </package>
