--- a/Source/Examples/ExampleLibrary/ExampleLibrary_NET35.csproj
+++ b/Source/Examples/ExampleLibrary/ExampleLibrary_NET35.csproj
@@ -38,6 +38,7 @@
     </Compile>
     <Compile Include="Attributes\ExampleAttribute.cs" />
     <Compile Include="CustomSeries\ErrorItem.cs" />
+    <Compile Include="CustomSeries\ErrorSeries.cs" />
     <Compile Include="CustomSeries\FlagSeries.cs" />
     <Compile Include="CustomSeries\LineSegmentSeries.cs" />
     <Compile Include="CustomSeries\MatrixSeries.cs" />
@@ -45,6 +46,7 @@
     <Compile Include="ExampleInfo.cs" />
     <Compile Include="Examples.cs" />
     <Compile Include="Attributes\ExamplesAttribute.cs" />
+    <Compile Include="Discussions\DiscussionExamples.cs" />
     <Compile Include="Examples\AnnotationExamples.cs" />
     <Compile Include="Examples\BarSeries\BarAndColumnSeriesExamples.cs" />
     <Compile Include="Examples\BarSeries\BarSeriesExamples.cs" />
@@ -57,7 +59,6 @@
     <Compile Include="Examples\AxisExamples.cs" />
     <Compile Include="Examples\AreaSeriesExamples.cs" />
     <Compile Include="Examples\CategoryColorAxisExamples.cs" />
-    <Compile Include="Examples\ClosedIssues.cs" />
     <Compile Include="Examples\ContourSeriesExamples.cs" />
     <Compile Include="Examples\BarSeries\IntervalBarSeriesExamples.cs" />
     <Compile Include="Examples\BarSeries\RectangleBarSeriesExamples.cs" />
@@ -70,7 +71,6 @@
     <Compile Include="Examples\ExamplesBase.cs" />
     <Compile Include="Examples\ItemsSourceExamples.cs" />
     <Compile Include="Examples\FunctionSeriesExamples.cs" />
-    <Compile Include="Examples\OpenIssues.cs" />
     <Compile Include="Examples\PerformanceExamples.cs" />
     <Compile Include="Examples\RangeColorAxisExamples.cs" />
     <Compile Include="Examples\ShowMeTheNumbersExamples.cs" />
@@ -81,16 +81,17 @@
     <Compile Include="Examples\LegendExamples.cs" />
     <Compile Include="Examples\CustomSeriesExamples.cs" />
     <Compile Include="Examples\DateTimeAxisExamples.cs" />
-    <Compile Include="CustomSeries\ErrorSeries.cs" />
     <Compile Include="Examples\LineSeriesExamples.cs" />
     <Compile Include="Examples\LogarithmicAxisExamples.cs" />
     <Compile Include="Examples\PieSeriesExamples.cs" />
     <Compile Include="Examples\PolarPlotExamples.cs" />
+    <Compile Include="Examples\ScatterSeriesExamples.cs" />
     <Compile Include="Examples\TimeSpanAxisExamples.cs" />
     <Compile Include="Examples\TrackerExamples.cs" />
     <Compile Include="Helpers\Sun.cs" />
+    <Compile Include="Issues\OpenIssues.cs" />
+    <Compile Include="Issues\ClosedIssues.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Examples\ScatterSeriesExamples.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Bergensbanen.csv" />
@@ -107,12 +108,5 @@
       <Name>OxyPlot_NET35</Name>
     </ProjectReference>
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
 </Project>
