--- a/Source/Examples/ExampleLibrary/ExampleLibrary_SL4.csproj
+++ b/Source/Examples/ExampleLibrary/ExampleLibrary_SL4.csproj
@@ -62,6 +62,7 @@
     </Compile>
     <Compile Include="Attributes\ExampleAttribute.cs" />
     <Compile Include="CustomSeries\ErrorItem.cs" />
+    <Compile Include="CustomSeries\ErrorSeries.cs" />
     <Compile Include="CustomSeries\FlagSeries.cs" />
     <Compile Include="CustomSeries\LineSegmentSeries.cs" />
     <Compile Include="CustomSeries\MatrixSeries.cs" />
@@ -69,6 +70,7 @@
     <Compile Include="ExampleInfo.cs" />
     <Compile Include="Examples.cs" />
     <Compile Include="Attributes\ExamplesAttribute.cs" />
+    <Compile Include="Discussions\DiscussionExamples.cs" />
     <Compile Include="Examples\AnnotationExamples.cs" />
     <Compile Include="Examples\BarSeries\BarAndColumnSeriesExamples.cs" />
     <Compile Include="Examples\BarSeries\BarSeriesExamples.cs" />
@@ -81,7 +83,6 @@
     <Compile Include="Examples\AxisExamples.cs" />
     <Compile Include="Examples\AreaSeriesExamples.cs" />
     <Compile Include="Examples\CategoryColorAxisExamples.cs" />
-    <Compile Include="Examples\ClosedIssues.cs" />
     <Compile Include="Examples\ContourSeriesExamples.cs" />
     <Compile Include="Examples\BarSeries\IntervalBarSeriesExamples.cs" />
     <Compile Include="Examples\BarSeries\RectangleBarSeriesExamples.cs" />
@@ -94,7 +95,6 @@
     <Compile Include="Examples\ExamplesBase.cs" />
     <Compile Include="Examples\ItemsSourceExamples.cs" />
     <Compile Include="Examples\FunctionSeriesExamples.cs" />
-    <Compile Include="Examples\OpenIssues.cs" />
     <Compile Include="Examples\PerformanceExamples.cs" />
     <Compile Include="Examples\RangeColorAxisExamples.cs" />
     <Compile Include="Examples\ShowMeTheNumbersExamples.cs" />
@@ -105,16 +105,17 @@
     <Compile Include="Examples\LegendExamples.cs" />
     <Compile Include="Examples\CustomSeriesExamples.cs" />
     <Compile Include="Examples\DateTimeAxisExamples.cs" />
-    <Compile Include="CustomSeries\ErrorSeries.cs" />
     <Compile Include="Examples\LineSeriesExamples.cs" />
     <Compile Include="Examples\LogarithmicAxisExamples.cs" />
     <Compile Include="Examples\PieSeriesExamples.cs" />
     <Compile Include="Examples\PolarPlotExamples.cs" />
+    <Compile Include="Examples\ScatterSeriesExamples.cs" />
     <Compile Include="Examples\TimeSpanAxisExamples.cs" />
     <Compile Include="Examples\TrackerExamples.cs" />
     <Compile Include="Helpers\Sun.cs" />
+    <Compile Include="Issues\OpenIssues.cs" />
+    <Compile Include="Issues\ClosedIssues.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Examples\ScatterSeriesExamples.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Bergensbanen.csv" />
@@ -139,11 +140,4 @@
       </FlavorProperties>
     </VisualStudio>
   </ProjectExtensions>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
